--- a/RevertRebrand.theme.css
+++ b/RevertRebrand.theme.css
@@ -12,45 +12,45 @@
 /* If you do not want some things reverted, commend out imports like /* @import url("...") */
 
 /* [Recommended] Revert CSS variables: colors, fonts */
-@import url('https://Goose-Nest.github.io/GT-RevertRebrand/src/variables.css');
+@import url('https://monkxy.github.io/RevertRebrand/src/variables.css');
 
 /* Generated hardcoded color fixes */
-@import url('https://Goose-Nest.github.io/GT-RevertRebrand/src/hardcoded.css');
+@import url('https://monkxy.github.io/RevertRebrand/src/hardcoded.css');
 
 
 /* Individual components: */
 
 /* Revert mentions */
-@import url('https://Goose-Nest.github.io/GT-RevertRebrand/src/components/mentions.css');
+@import url('https://monkxy.github.io/RevertRebrand/src/components/mentions.css');
 
 /* Revert reactions */
-@import url('https://Goose-Nest.github.io/GT-RevertRebrand/src/components/reactions.css');
+@import url('https://monkxy.github.io/RevertRebrand/src/components/reactions.css');
 
 /* Revert profile pictures */
-@import url('https://Goose-Nest.github.io/GT-RevertRebrand/src/components/pfps.css');
+@import url('https://monkxy.github.io/RevertRebrand/src/components/pfps.css');
 
 /* Revert folders (default colors back to old blurple) */
-@import url('https://Goose-Nest.github.io/GT-RevertRebrand/src/components/folders.css');
+@import url('https://monkxy.github.io/RevertRebrand/src/components/folders.css');
 
 /* Revert windows wordmark */
-@import url('https://Goose-Nest.github.io/GT-RevertRebrand/src/components/wordmark.css');
+@import url('https://monkxy.github.io/RevertRebrand/src/components/wordmark.css');
 
 /* [Optional] Revert new user popouts */
-/* @import url('https://Goose-Nest.github.io/GT-RevertRebrand/src/components/userPopout.css'); */
+@import url('https://monkxy.github.io/RevertRebrand/src/components/userPopout.css');
 
 /* [Optional] Revert new role designs */
-/* @import url('https://Goose-Nest.github.io/GT-RevertRebrand/src/components/roles.css'); */
+@import url('https://monkxy.github.io/RevertRebrand//src/components/roles.css');
 
 /* General changes: */
 
 /* Revert some BD specific elements */
-@import url('https://Goose-Nest.github.io/GT-RevertRebrand/src/general/bd.css');
+@import url('https://monkxy.github.io/RevertRebrand/src/general/bd.css');
 
 /* Revert some inputs */
-@import url('https://Goose-Nest.github.io/GT-RevertRebrand/src/general/inputs.css');
+@import url('https://monkxy.github.io/RevertRebrand/src/general/inputs.css');
 
 /* Revert some SVGs (colors for smaller icons) */
-@import url('https://Goose-Nest.github.io/GT-RevertRebrand/src/general/svgs.css');
+@import url('https://monkxy.github.io/RevertRebrand/src/general/svgs.css');
 
 /* Revert some other minor things */
-@import url('https://Goose-Nest.github.io/GT-RevertRebrand/src/general/other.css');
+@import url('https://monkxy.github.io/RevertRebrand/src/general/other.css');
